# mixtera

./: .clang-format  .coveragerc  .gitignore  .pylintrc  CMakeLists.txt  README.md  black.toml  dev-requirements.txt  environment.yml  example.json  pixi.toml  pyproject.toml  pytest-coverage.txt  requirements.txt  setup.cfg  setup.py
.github/actions/mamba/: action.yml
.github/workflows/: workflow.yaml
cmake/: dependencies.cmake  system_info.cmake
cmake/modules/: FindArrow.cmake
docs/: requirements.txt
docs/source/: conf.py  get_started.md  index.md  query.md  server.md
docs/source/_static/system_diagram/: mixtera_system_diagram.drawio
docs/source/design/: query_processing.md
docs/source/references/: data_collection.md  dataset.md  query.md
examples/: client_local_example.py  client_server_example.py  client_torch_example.py  client_torch_remote_example.py  create_rpj_sample.py  download_slim_pajama.py  inverted_index_example.py  parse_slimpajama.py  query_remote.py  query_rpj_sample.py  simple_client.py  torchtitan.md
examples/clariden/: Dockerfile
experiments/datasets/: README.md  convert_natural_instructions.py  protocol.py  select_mix_ni.py  select_natural_instructions.py
experiments/evaluation/: analyze_result.ipynb  append_meta.py  eval_ni.py  score_ni.py
integrationtests/: prep_server.py  run.sh  utils.py
integrationtests/checkpointing/: test_local_checkpointing.py  test_server_checkpointing.py
integrationtests/feedback/: test_local_feedback.py  test_server_feedback.py
integrationtests/local/: test_local.py
integrationtests/local_data_collection/: test_local_collection.py
integrationtests/mixtera_hf_dataset/: test_hf_dataset.py
integrationtests/mixtera_torch_dataset/: test_torch_dataset.py
integrationtests/remote_data_collection/: test_remote_collection.py
integrationtests/server/: test_server.py
mixtera/: chunker_index.c  chunker_index.cpp  chunker_index.pyx
mixtera/core/algo/ado/: ado.py
mixtera/core/algo/aioli/: aioli.py
mixtera/core/algo/dynamic_mixing/: dynamic_mixing.py
mixtera/core/algo/loss_avg/: loss_avg.py
mixtera/core/client/: __init__.py  chunk_reader.py  client_leftovers.py  mixtera_client.py
mixtera/core/client/local/: __init__.py  local_stub.py
mixtera/core/client/schedule/: __init__.py  mixture_schedule.py
mixtera/core/client/server/: server_stub.py
mixtera/core/datacollection/: __init__.py  data_collection.py  mixtera_data_collection.py  mixtera_data_collection_old.py  property_type.py
mixtera/core/datacollection/datasets/: __init__.py  croissant_dataset.py  crossaint_dataset.py  dataset.py  dataset_type.py  jsonl_dataset.py  llava_dataset.py  parquet_dataset.py  web_dataset.py
mixtera/core/datacollection/index/: __init__.py  index.py  index_collection.py  metadata_parser.py  parser_collection.py
mixtera/core/datacollection/local/: __init__.py  local_collection.py
mixtera/core/datacollection/remote/: __init__.py  remote_collection.py
mixtera/core/filesystem/: __init__.py  abstract_filesystem.py  filesystem.py  local_filesystem.py
mixtera/core/processing/: __init__.py  execution_mode.py
mixtera/core/processing/property_calculation/: __init__.py  executor.py  local_executor.py
mixtera/core/query/: __init__.py  chunk_distributor.py  mixture.py  mixture.pyx  query.py  query_cache.py  query_plan.py  query_result.py  query_result_leftovers.py  result_chunk.py
mixtera/core/query/chunker/: CMakeLists.txt  __init__.py
mixtera/core/query/mixture/: __init__.py  arbitrary_mixture.py  dynamic_mixture.py  hierarchical_static_mixture.py  inferring_mixture.py  mixture.py  mixture_key.py  mixture_schedule.py  static_mixture.py
mixtera/core/query/operators/: _base.py  intersect.py  materialize.py  operator.py  select.py  union.py
mixtera/datacollection/: __init__.py  data_collection.py  dataset_types.py
mixtera/datacollection/local/: local_collection.py
mixtera/datacollection/remote/: __init__.py  remote_collection.py
mixtera/datasets/: __init__.py  dataset_types.py  mixtera_dataset.py
mixtera/datasets/local/: __init__.py  local_mixtera_dataset.py
mixtera/datasets/remote/: __init__.py  remote_mixtera_dataset.py
mixtera/hf/: mixtera_hf_dataset.py
mixtera/multimodal/webdataset/: __init__.py  pipeline.py
mixtera/network/: __init__.py  network_utils.py  server_task.py
mixtera/network/client/: client_feedback.py
mixtera/network/connection/: __init__.py  server_connection.py
mixtera/network/server/: entrypoint.py  mixtera-server  server.py  server_task.py
mixtera/server/: __init__.py  entrypoint.py  server.py  server_connection.py  server_task.py
mixtera/tests/core/client/: test_mixtera_client.py
mixtera/tests/core/datacollection/: test_data_collection.py  test_dataset_types.py  test_mixtera_data_collection.py
mixtera/tests/core/filesystem/: test_abstract_filesystem.py  test_filesystem.py  test_local_filesystem.py
mixtera/tests/core/query/: test_chunk_distributor.py  test_dynamic_mixture.py  test_e2e.py  test_mixture.py  test_query.py  (+4 more)
mixtera/tests/datacollection/: test_data_collection.py  test_dataset_types.py
mixtera/tests/network/: test_network_utils.py  test_server_task.py
mixtera/tests/utils/: test_checkpoint.py  test_tokenizing_iterator.py  test_utils.py
mixtera/torch/: mixtera_torch_dataset.py
mixtera/utils/: __init__.py  checkpoint.py  dataset_utils.py  feedback.py  network_utils.py  prefetch_iterator.py  tokenizing_iterator.py  utils.py  webdataset_utils.py
mixtera_integrationtests/: utils.py
mixtera_integrationtests/checkpointing/: test_local_checkpointing.py  test_server_checkpointing.py
mixtera_integrationtests/local/: test_local.py
mixtera_integrationtests/mixtera_hf_dataset/: test_hf_dataset.py
mixtera_integrationtests/mixtera_torch_dataset/: test_torch_dataset.py
mixtera_integrationtests/server/: test_server.py
scripts/: compliance.sh
src/engine/datasets/: __init__.py  _base.py  remote.py
src/engine/operators/: __init__.py  _base.py  builtins.py  filter.py  planner.py  query.py
src/server/: api_server.py  protocol.py
(+29 files in other folders)
